--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,8 +1,9 @@
 body
 {
+    background: #1e1f24;
     color: #333;
 text-align: center;
-font-family: "curier";
+font-family: "arial";
 font-size: 16px;
 margin: 0;
 padding: 0;
@@ -12,13 +13,20 @@ padding: 0;
 #cabecera
 {
 
-   background: #88f;
+   background: #37488b ;
    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5) ;
    color: white;
    font-weight: bold ;
    margin: 0;
-   padding: 0.5em;
+   padding: 0.5em  0 0.5em 2em;
 }
+
+#cabecera #logo
+{
+  width: 20px;
+  vertical-align: middle;
+}
+
 #cabecera #tagline
 {
     margin: 0 0 0 1em;
@@ -42,6 +50,7 @@ margin: 0 auto;
 }
 #post 
 {
+    background: white;
     padding: 1em;
 
 }
