--- a/css/estilos.css
+++ b/css/estilos.css
@@ -57,8 +57,13 @@ margin: 0 auto;
 
 #footer
 {
-    background: #777;
+    background:#777;
     color: white;
     text-align: center;
     padding: 0.5em;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 20px;
+
 }
